# Org-Magic-Agent

./: .gitignore  README.md  bot.py  bulk_upload.py  data_utils.py  getToken.py  metadata_map.yml  metadata_processor.py  org_connection.py  org_utils.py  pyproject.toml  simple_store.py  simple_store_example.py  talk_to_agent.py  weather_agent.py  weather_agent_thinking.py
llms/base_classes/: chatmodel.py  embeddings.py  jwt_utils.py  llm.py
resources/: CustomField.html  CustomObject.html  Profile.html  RemoteSiteSetting.html  SurveySettings.html
